updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,21 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am currently a student at Bellevue College working on a degree in Healthcare Informatics.
+        I live in Kirkland and have a puppy named Bodhi. We love to go for runs in my free time.
+      </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I currently live in Kirkland, WA, but I was born in Boston, MA. I've also lived in Mount Vernon and Bellingham for a little while.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy hiking, cooking, reading, spending time with my puppy, or doing anything creative.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I'm not entirely sure what I want to do for the rest of my life, but my dream job would allow me to work on my own schedule
+       so that I can travel. 
+      </p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Kirkland, WA </p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>This seems like a pretty good field to be in. I really like the creative aspects. I like the possibilities of all the things you could create.</p>
     </section>
 
     <footer id="footer">
